// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapApp snapshot tests should match the snapshot at device management state 1`] = `
<div
  className="map-app-container"
>
  <header
    className="map-app-header"
  >
    <div
      className="map-app-header-block-container"
    >
      <div
        className="map-app-header-block"
      >
        <img
          alt="logo"
          className="map-app-header-brand-logo"
          src="test-file-stub"
        />
        <p
          className="map-app-header-brand-text"
        >
          map
        </p>
      </div>
      <div
        className="map-app-header-block terminal-search-header-block"
      >
        <img
          alt="terminal-search-image"
          src="test-file-stub"
        />
        <input
          className="terminal-search-input"
          data-testid="terminalSearch"
          placeholder="search"
          type="text"
        />
      </div>
    </div>
    <div
      className="map-app-header-block-container"
    >
      <div
        className="map-app-header-block user-points-header-block"
      >
        <img
          alt="user-points-image"
          src="test-file-stub"
        />
        <div
          className="user-points-loader-container"
        >
          <div
            className="finik-loader"
          />
        </div>
      </div>
      <div
        className="map-app-header-block"
      >
        <button
          className="map-app-header-user-button"
          data-testid="userButton"
          onClick={[Function]}
        >
          <img
            alt="login-header-account"
            className="map-app-header-account-image"
            src="test-file-stub"
          />
          <p
            className="map-app-header-account-text"
          />
        </button>
        <img
          alt="map-app-header-apps-google-play"
          src="test-file-stub"
        />
        <img
          alt="map-app-header-apps-app-store"
          src="test-file-stub"
        />
      </div>
    </div>
  </header>
  <div
    className="device-map"
  />
</div>
`;

exports[`MapApp snapshot tests should match the snapshot at home screen step 1`] = `
<div
  className="map-app-container"
>
  <header
    className="map-app-header"
  >
    <div
      className="map-app-header-block-container"
    >
      <div
        className="map-app-header-block"
      >
        <img
          alt="logo"
          className="map-app-header-brand-logo"
          src="test-file-stub"
        />
        <p
          className="map-app-header-brand-text"
        >
          map
        </p>
      </div>
    </div>
    <div
      className="map-app-header-block-container"
    >
      <div
        className="map-app-header-block"
      >
        <button
          className="map-app-header-user-button"
          data-testid="userButton"
          onClick={[Function]}
        >
          <img
            alt="login-header-account"
            className="map-app-header-account-image"
            src="test-file-stub"
          />
          <p
            className="map-app-header-account-text"
          >
            loginAction
          </p>
        </button>
        <img
          alt="map-app-header-apps-google-play"
          src="test-file-stub"
        />
        <img
          alt="map-app-header-apps-app-store"
          src="test-file-stub"
        />
      </div>
    </div>
  </header>
  <div
    className="product-description-window"
  >
    <div
      className="product-description-shadow"
    />
    <div
      className="product-description-content-container"
    >
      <div
        className="product-description-text"
      >
        <h1>
          brand map
        </h1>
        <p>
          loginCallToAction
        </p>
      </div>
      <img
        alt="product-description-phone-image"
        src="test-file-stub"
      />
    </div>
  </div>
  <div
    className="device-map"
  />
</div>
`;

exports[`MapApp snapshot tests should match the snapshot at user authentication state 1`] = `
<div
  className="map-app-container"
>
  <header
    className="map-app-header"
  >
    <div
      className="map-app-header-block-container"
    >
      <div
        className="map-app-header-block"
      >
        <img
          alt="logo"
          className="map-app-header-brand-logo"
          src="test-file-stub"
        />
        <p
          className="map-app-header-brand-text"
        >
          map
        </p>
      </div>
    </div>
    <div
      className="map-app-header-block-container"
    >
      <div
        className="map-app-header-block"
      >
        <button
          className="map-app-header-user-button"
          data-testid="userButton"
          onClick={[Function]}
        >
          <img
            alt="login-header-account"
            className="map-app-header-account-image"
            src="test-file-stub"
          />
          <p
            className="map-app-header-account-text"
          >
            loginAction
          </p>
        </button>
        <img
          alt="map-app-header-apps-google-play"
          src="test-file-stub"
        />
        <img
          alt="map-app-header-apps-app-store"
          src="test-file-stub"
        />
      </div>
    </div>
  </header>
  <div
    className="login-modal-window"
  >
    <div
      className="login-modal-container"
    >
      <div
        className="login-modal-header-container"
      >
        <img
          alt="login-modal-header-logo"
          className="login-modal-header-logo"
          src="test-file-stub"
        />
        <p
          className="login-modal-header"
        >
          brand map
        </p>
        <p
          className="login-modal-header-description"
        >
          loginCallToAction
        </p>
      </div>
    </div>
  </div>
  <div
    className="device-map"
  />
</div>
`;
